fixed layout issue

--- a/components/DnDLayout/DnDLayout.module.scss
+++ b/components/DnDLayout/DnDLayout.module.scss
@@ -2,6 +2,7 @@
 
 .wrap {
   margin: 0;
+  overflow-x: hidden;
 
   @include TabletUp {
     margin-top: 100px !important;
